<resources>
    <string name="app_name">Lock Cash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_store">Store</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_lock">Lock</string>
    <string name="title_event">Event</string>
</resources>