<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_store"
        android:title="@string/title_store" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_ranking"
        android:title="@string/title_ranking" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_lock"
        android:icon="@drawable/ic_lock_tab"
        android:title="@string/title_lock" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_event"
        android:title="@string/title_event" />

</menu>